tests/samples/negative/functions/lambda_capture_borrowed_view.ax
module lambda_capture_borrowed_view;

fn main() -> i32 {
    let text: str = "hello";
    let length = fn() -> usize {
        return strblen(text);
    };
    return 0;
}
